# roast

./: Cargo.toml
src/: bean.rs  colors.rs  main.rs  triple.rs
src/cli/: commands.rs  parser.rs
src/cli/commands/: help.rs
