[package]
name = "roast"
version = "0.1.0"
edition = "2024"
authors = [ "Cupertino", "Dante" ]
license = "MPL-2.0"

[dependencies]
const-str = "0.6"
owo-colors = "4"
blake3 = { version = "1" }
serde = { version = "1", features = ["derive", "rc"] }
semver = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
target-lexicon = "0.13"